@@ -83,3 +83,4 @@ OTHER CHANGES:
 ====>	Fixed "Here and Now" and Main window (both normal and compact) not showing (or hiding) experiments after a change in the MinScience threshold implies experiment is now incomplete (or completed).
 ====>	Fixed "Here and Now" window size not updating correctly when hiding MinScience slider.
 ====>	Fixed position of experiment buttons in "Here and Now" window when MinScience slider hidden.
+====>	Fixed experiments not being re-classified as incomplete (or completed) when switching between regular and VeryLowMinScience if MinScience slider hidden.
