@@ -69,3 +69,4 @@ ChangeLog
 		Fixed experiments not being re-classified as completed or incomplete (and hidden or shown) after a change in the MinScience threshold changes their "status".
 		Fixed 'Here and Now' window not resizing correctly when hiding MinScience slider.
 		Fixed position of experiment buttons in 'Here and Now' window when MinScience slider hidden.
+		Fixed experiments not being re-classified as incomplete (or completed) when switching between regular and VeryLowMinScience if MinScience slider hidden.
